--- a/index.html
+++ b/index.html
@@ -260,17 +260,17 @@ Visual Trend Analysis: Utilized a variety of charts (line, bar, heatmaps, treema
                         </ul>
                     </div>
                     <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="contact-form-wrapper">
-                        <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE"> <!-- IMPORTANT: Replace with your key -->
+                        <input type="hidden" name="access_key" value="da1b4acf-691e-4c9d-bfac-f710399cbbc8"> <!-- IMPORTANT: Replace with your key -->
                         <input type="hidden" name="subject" value="New Contact from Presha's Portfolio">
                         <input type="hidden" name="from_name" value="Portfolio Visitor">
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="name">Your Name:</label>
-                                <input type="text" id="name" name="name" required placeholder="e.g., Jane Doe">
+                                <input type="text" id="name" name="name" required placeholder="e.g., Presha Patel">
                             </div>
                             <div class="form-group">
                                 <label for="email">Your Email:</label>
-                                <input type="email" id="email" name="email" required placeholder="e.g., jane@example.com">
+                                <input type="email" id="email" name="email" required placeholder="e.g., preshapatel35@gmail.com">
                             </div>
                         </div>
                         <div class="form-group">
