--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Developed a dynamic and responsive UI with real-time calculations and robust sea
                                 <span>HTML5</span><span>CSS3</span><span>Javascript(ES6+)</span><span>Git</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" target="_blank" class="btn btn-small btn-outline" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i> Live Demo</a> 
+                                <a href="https://presha13.github.io/Eventify/" target="_blank" class="btn btn-small btn-outline" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i> Live Demo</a> 
                                 <a href="#" target="_blank" class="btn btn-small btn-outline" rel="noopener noreferrer"><i class="fab fa-github"></i> View Code</a>
                             </div>
                         </div>
