Update experience section with new internship details
Added experience details for Machine Learning Intern role.

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@ Visual Trend Analysis: Utilized a variety of charts (line, bar, heatmaps, treema
                 <h2 class="section-title"><span>Experience & Activities</span></h2>
                 <div class="experience-grid">
                     <div class="experience-item">
+                        <h3><i class="fas fa-chalkboard-teacher exp-icon"></i> Machine Learning Intern</h3>
+                        <p class="experience-meta">XMatiq Technologies LLP</p>
+                        <p>Contributing to computer vision projects using YOLO (OpenCV, PyTorch) for real-time object detection and OCR pipelines (Tesseract, TensorRT) for text/number extraction, including dataset preparation, model training, and performance evaluation for automation use cases</p>
+                    </div>
+                    <div class="experience-item">
                         <h3><i class="fas fa-chalkboard-teacher exp-icon"></i> Data Analytics Intern</h3>
                         <p class="experience-meta">Macrosoft Creation Pvt. Ltd.</p>
                         <p> Designing and Implementing a comprehensive Business Intelligence solution from the ground up. I developed a centralized and automated analytics dashboard using Microsoft Power BI, connected directly to the institute's MySQL database.</p>
