Update skills and coursework in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container hero-content">
                 <div class="hero-text">
                     <h1>Hi, I'm <span class="highlight hero-name-highlight">Presha Patel</span></h1>
-                    <h2>IT Graduate | Tech Enthusiast</h2>
+                    <h2>IT Graduate | AI/ML Enthusiast</h2>
                     <p>Enthusiastic and dedicated, with a passion for learning and innovation. Eager to apply academic knowledge to real-world challenges, thriving in collaborative environments and committed to continuous growth. Currently expanding expertise in AI/ML and modern technologies.</p>
                     <div class="hero-buttons">
                         <a href="#contact" class="btn btn-primary"><i class="fas fa-envelope"></i> Connect With Me</a>
@@ -64,35 +64,56 @@
                 <h2 class="section-title"><span>My Key Skills</span></h2>
                 <div class="skills-grid">
                     <div class="skill-card">
-                        <h3><i class="fas fa-code skill-icon"></i> Programming</h3>
+                        <h3><i class="fas fa-code skill-icon"></i> Programming Languages</h3>
                         <ul>
-                            <li>C</li>
                             <li>Python</li>
-                            <li> DAX Query</li>
+                            <li>C++</li>
+                            <li>C</li>    
                             <li>HTML, CSS, JavaScript</li>
                         </ul>
                     </div>
                     <div class="skill-card">
-                        <h3><i class="fas fa-cogs skill-icon"></i> DSA & Frameworks</h3>
+                        <h3><i class="fas fa-code skill-icon"></i> Data Science</h3>
                         <ul>
-                            <li>Data Structures & Algorithms</li>
-                            <li>React.js </li>
-                            <li>Node.js</li>
+                            <li> Machine Learning</li>
+                            <li> Data Science</li>
+                            <li> Power Bi</li>
+                            <li> DAX Query</li>
                         </ul>
                     </div>
                     <div class="skill-card">
-                        <h3><i class="fas fa-star skill-icon"></i> Tools</h3>
+                        <h3><i class="fas fa-code skill-icon"></i> Tools & Framework</h3>
                         <ul>
-                            <li>Power BI</li>
-                            <li>Jupyter Notebook</li>
-                            <li>VS Code</li>
-                            <li> Git & GitHub</li>
+                            <li>React.js</li>
+                            <li>Node.js</li>
+                            <li> Git / Github </li>
+                            <li> Docker</li>
+                        </ul>
+                    </div>
+                    <div class="skill-card">
+                        <h3><i class="fas fa-cogs skill-icon"></i> Specializations</h3>
+                        <ul>
+                            <li>Data Structures & Algorithms</li>
+                            <li>Software Engineering</li>
+                            <li>Database Management</li>
+                            <li>Database Management</li>
+                        </ul>
+                    </div>
+                     <div class="skill-card">
+                        <h3><i class="fas fa-cogs skill-icon"></i> ML Libraries</h3>
+                        <ul>
+                            <li>Numpy</li>
+                            <li>Pandas</li>
+                            <li>MatplotLib</li>
+                            <li>Scikit-Learn</li>
+                            <li>Pytorch</li>
+                            <li>Opencv</li>
                         </ul>
                     </div>
                     <div class="skill-card full-span-skill">
                         <h3><i class="fas fa-book-open skill-icon"></i> Relevant Coursework Includes</h3>
                         <div class="coursework-tag-list"> <!-- Changed class name -->
-                            <span>AI/ML</span><span>Data Science</span><span>Web Development</span><span>Software Engineering</span><span>Database Management</span><span>UI/UX</span><span>IoT</span><span>Cloud Analytics</span><span>Computer Vision</span><span>Network Security</span>
+                            <span>Model Training</span><span>Fine Tunning</span><span>Transfer Learning </span><span>Scikit-Learn</span><span>Pytorch</span><span>Deep Learning </span><span>Computer Vision</span><span>Data Science</span><span>Web Development</span><span>Software Engineering</span><span>Database Management</span><span>UI/UX</span><span>IoT</span><span>Cloud Analytics</span>
                         </div>
                     </div>
                 </div>
