Update project cards with new details and placeholders
Added new project details for Wagon Detection and updated image placeholders.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,30 @@
                 <div class="projects-grid-unique">
                     <div class="project-card-unique">
                         <div class="project-card-unique-image-wrapper">
-                            <!-- <img src="project-globe-pay-placeholder.png" alt="Eventify Project Mockup"> -->
+                            <!-- <img src="placeholder.png" alt="Eventify Project Mockup"> -->
+                        </div>
+                        <div class="project-card-unique-content">
+                            <h3>Wagon Detection</h3>
+                            <p class="project-subtitle">Automated Wagon Number Recognition System (Computer Vision + OCR)</p>
+                            <p class="project-description">
+                               Developed a real-time wagon-number detection system using a custom-trained YOLO model integrated
+with a GStreamer and OpenCV video pipeline. The detected number regions were processed using Mi
+crosoft Florence OCR to accurately extract wagon numbers from moving train footage. The system
+also automated frame capture and generated structured CSV logs, creating a fully scalable end-to-end
+computer vision solution.
+                            </p>
+                            <div class="project-tags">
+                                <span>YOLOv11 (Object Detection)</span><span>Florence (OCR) </span><span>Opencv</span><span>CUDA</span><span>Gstreamer</span><span>FFmpeg</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://presha13.github.io/" target="_blank" class="btn btn-small btn-outline" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i> Live Demo</a> 
+                                <a href="https://github.com/presha13/" target="_blank" class="btn btn-small btn-outline" rel="noopener noreferrer"><i class="fab fa-github"></i> View Code</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card-unique">
+                        <div class="project-card-unique-image-wrapper">
+                            <!-- <img src="placeholder.png" alt="Eventify Project Mockup"> -->
                         </div>
                         <div class="project-card-unique-content">
                             <h3>Eventify</h3>
@@ -148,7 +171,7 @@ Developed a dynamic and responsive UI with real-time calculations and robust sea
                     </div>
                     <div class="project-card-unique">
                         <div class="project-card-unique-image-wrapper">
-                            <!-- <img src="project-upnext-realtyy-placeholder.png" alt="UpNext Realtyy Project Mockup"> -->
+                            <!-- <img src="placeholder.png" alt="UpNext Realtyy Project Mockup"> -->
                         </div>
                         <div class="project-card-unique-content">
                             <h3>UpNext Realtyy</h3>
@@ -170,7 +193,7 @@ Utilized modern CSS techniques, including Flexbox, Grid, and backdrop-filter, to
                     </div>
                     <div class="project-card-unique">
                         <div class="project-card-unique-image-wrapper">
-                            <!-- <img src="project-globe-pay-placeholder.png" alt="Power BI Dashboard Mockup"> -->
+                            <!-- <img src="placeholder.png" alt="Power BI Dashboard Mockup"> -->
                         </div>
                         <div class="project-card-unique-content">
                             <h3>PowerBI Dashboard</h3>
