Revise hero section

--- a/index.html
+++ b/index.html
@@ -83,13 +83,9 @@
                     <div class="hero-content">
                         <div class="hero-text">
                             <h1 class="hero-title">Hi, I'm Presha Patel</h1>
-                            <h2 class="hero-subtitle">AI & ML Enthusiast | Data Analyst</h2>
+                            <h2 class="hero-subtitle">IT Graduate | AI/ML Enthusiast </h2>
                             <p class="hero-description">
-                                I am an enthusiastic IT graduate and Data Analyst dedicated to bridging the gap between
-                                data and insights. With hands-on experience in machine learning algorithms and modern
-                                web technologies, I am committed to building intelligent systems that make a meaningful
-                                impact. My journey is driven by curiosity and a constant desire to solve complex
-                                problems through innovation.
+                              I am an aspiring Machine Learning Engineer with a strong interest in designing, training, and deploying intelligent models. I enjoy working with machine learning algorithms, modern frameworks, and real-world datasets to build scalable and impactful solutions. Driven by curiosity and continuous learning, I am motivated to solve complex problems and contribute to innovative, AI-driven systems.
                             </p>
                             <div class="hero-actions">
                                 <a href="#contact" class="btn btn-primary">
